# us-presidential-vote-analysis

./: .env.example  .gitignore  CLAUDE.md  README.md  db_tools.py  pyproject.toml  step1_electoral_college_data.ipynb  step2_popular_vote_data.ipynb  step3_create_datamart.ipynb
.claude/: loop.append-guard.json  loop.config.md  settings.json
.claude/specs/: backlog-api.md  backlog-mvp.md  decisions.md  research-pv-source.md
.github/workflows/: ci.yml
docs/: ROADMAP.md  api-snapshot.md  canonical-keys.md  corrections.md  mit-data-anomalies.md  ucsb-html-formats.md
scripts/: run_integration_tests.sh
src/usvote/: __init__.py  __main__.py  config.py  db.py  getters.py  join.py  load.py  parse.py  pipeline.py  scrape.py  slug.py  snapshot.py  snapshot_schema.py  spine.py  transform.py  warehouse.py  years.py
src/usvote/api/: __init__.py  __main__.py  app.py  cache.py  config.py  models.py  provenance.py  repository.py  routes.py
src/usvote/mit/: __init__.py  __main__.py  config.py  pipeline.py  read.py  reconcile.py  transform.py
src/usvote/pv/: __init__.py  load.py  schema.py  source.py  status.py  views.py
src/usvote/ucsb/: __init__.py  __main__.py  config.py  parse.py  pipeline.py  reconcile.py  scrape.py  transform.py
tests/: _helpers.py  conftest.py  test_config.py  test_db.py  test_load.py  test_parse.py  test_pipeline.py  test_scrape.py  test_transform.py
tests/fixtures/: __init__.py  api_snapshot.py  ec_getters_by_year.json  ec_state_roster_by_year.json  mit_1976-2024-president_sample.csv  mit_fusion_sample.csv  ucsb_synthetic_1976.html  ucsb_synthetic_2group.html  ucsb_synthetic_4group.html  ucsb_synthetic_dashdash.html  ucsb_synthetic_inline_cd.html  ucsb_synthetic_missing_states.html  ucsb_synthetic_nocolspan.html  ucsb_synthetic_summary_only.html  www_archives_gov_electoral_college_1824.html  www_archives_gov_electoral_college_1832.html  www_archives_gov_electoral_college_1836.html  www_archives_gov_electoral_college_1856.html  www_archives_gov_electoral_college_1860.html  www_archives_gov_electoral_college_1868.html  www_archives_gov_electoral_college_1872.html  www_archives_gov_electoral_college_2016.html  www_archives_gov_electoral_college_2020.html  www_archives_gov_electoral_college_2024.html  www_archives_gov_electoral_college_results.html
tests/integration/: __init__.py  test_db.py  test_ec_pv_join.py  test_load.py  test_pv_load.py  test_pv_union.py
tests/unit/: __init__.py  conftest.py  test_api_app.py  test_api_cache.py  test_api_config.py  test_api_e2e.py  test_api_endpoints.py  test_api_import_graph.py  test_api_models.py  test_api_openapi.py  test_api_provenance.py  test_api_redistributable_guard.py  test_config.py  test_db.py  test_entry_points.py  test_join.py  test_load.py  test_mit_config.py  test_mit_pipeline.py  test_mit_read.py  test_mit_reconcile.py  test_mit_transform.py  test_parse.py  test_pipeline.py  test_pv_load.py  test_pv_source.py  test_pv_status.py  test_pv_views.py  test_scrape.py  test_snapshot.py  test_spine.py  test_transform.py  test_ucsb_config.py  test_ucsb_fixtures.py  test_ucsb_parse.py  test_ucsb_pipeline.py  test_ucsb_reconcile.py  test_ucsb_scrape.py  test_ucsb_transform.py  test_warehouse.py
